--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">KotlinMPP</string>
     <string name="search_button_label">Search</string>
+    <string name="alert_message">Invalid choice</string>
 </resources>
