Made review changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">KotlinMPP</string>
     <string name="search_button_label">Search</string>
     <string name="alert_message">Invalid choice</string>
+    <string name="main_title">TrainBoard</string>
 </resources>
